# asimovFormacoes

./: .cursorrules  .env.example  .gitignore  0_llm_call.py  1.1.researcher.py  1.3.own_tools.py  14_analista.py  15_analistaRag.py  16_meuTesteBuscaCert.py  README.md  main.py  pyproject.toml  test_agentos.py
