[project]
name = "agno-estudo"
version = "0.1.0"
description = "Estudos com Agno: agentes, RAG, memória e AgentOS"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.5.11",
    "chonkie[semantic]>=1.6.1",
    "chromadb>=1.5.5",
    "ddgs>=9.12.0",
    "fastapi>=0.135.2",
    "openai>=2.30.0",
    "pypdf>=6.9.2",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.42.0",
    "yfinance>=1.2.0",
]
